Fix nav not showing

--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -117,6 +117,19 @@ header .socials {
     header .main a {
         font-size: 20px;
     }
+    
+    /* Add these styles to ensure navigation elements appear in mobile view */
+    nav {
+        margin-top: 1rem;
+        width: 100%;
+        justify-content: center;
+    }
+    
+    .nav-right {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
 }
 
 .meta {
